Installed seqeulize and postgres packages

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "team-skrrt-skrrt",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.6.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
