--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.6.5"
   },
   "devDependencies": {
