--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "sequelize": "dotenv sequelize",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "env NODE_DEV=development nodemon src/index.js"
   },
@@ -18,6 +19,7 @@
     "sequelize": "^6.6.5"
   },
   "devDependencies": {
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "sequelize-cli": "^6.2.0"
   }
 }
