--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "pg": "^8.7.1",
-    "sequelize": "^6.6.5"
+    "sequelize": "^6.6.5",
+    "validator": "^13.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
