--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "author": "team-skrrt-skrrt",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.22.0",
     "dotenv": "^10.0.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
