Use v3.9 of docker-compose config rather than v1

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,7 +1,8 @@
-backend:
-  ports:
-    - 80:80
-  environment:
-    PRODUCTION: 'true'
-    NODE_ENV: production
-    PORT: 80
+services:
+  backend:
+    ports:
+      - 80:80
+    environment:
+      PRODUCTION: 'true'
+      NODE_ENV: production
+      PORT: 80
