--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,6 +3,11 @@ services:
     ports:
       - 80:80
     environment:
-      PRODUCTION: 'true'
+      PRODUCTION: "true"
       NODE_ENV: production
       PORT: 80
+      POSTGRES_DB: ${POSTGRES_DB:-crowdcaptions}
+      POSTGRES_USER: ${POSTGRES_USER:-crowdcaptions}
+      POSTGRES_PASS: ${POSTGRES_PASS:-crowdcaptions}
+      POSTGRES_HOST: ${POSTGRES_HOST:-db}
+      POSTGRES_PORT: ${POSTGRES_PORT:-5432}
