--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "sequelize": "dotenv sequelize",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha src/test/test.js",
     "dev": "env NODE_DEV=development nodemon src/index.js"
   },
   "author": "team-skrrt-skrrt",
@@ -16,6 +16,7 @@
     "dotenv": "^10.0.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
+    "mocha": "^9.1.3",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.6.5",
