Pass panopto host in Docker config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - POSTGRES_PASS
       - POSTGRES_HOST
       - POSTGRES_PORT
+      - panopto_host
       - panopto_username
       - panopto_password
       - panopto_clientId
