--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -11,6 +11,7 @@ services:
       POSTGRES_PASS: ${POSTGRES_PASS:-crowdcaptions}
       POSTGRES_HOST: ${POSTGRES_HOST:-db}
       POSTGRES_PORT: ${POSTGRES_PORT:-5432}
+      panopto_host: ${panopto_host}
       panopto_username: ${panopto_username}
       panopto_password: ${panopto_password}
       panopto_clientId: ${panopto_clientId}
