--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,12 @@
     "dotenv": "^10.0.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "mocha": "^9.1.3",
+    "openid-client": "^5.1.0",
+    "passport": "^0.5.0",
+    "passport-oauth2": "^1.6.1",
+    "passport-openid-oauth20": "^1.2.6",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.6.5",
