--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -15,11 +15,18 @@ services:
 
   backend:
     environment:
+      NODE_ENV: development
+      PORT: ${PORT:-8000}
       POSTGRES_DB: ${POSTGRES_DB:-crowdcaptions}
       POSTGRES_USER: ${POSTGRES_PASS:-crowdcaptions}
       POSTGRES_PASS: ${POSTGRES_PASS:-crowdcaptions}
       POSTGRES_HOST: ${POSTGRES_HOST:-db}
       POSTGRES_PORT: ${POSTGRES_PORT:-5432}
+      panopto_host: ${panopto_host}
+      panopto_username: ${panopto_username}
+      panopto_password: ${panopto_password}
+      panopto_clientId: ${panopto_clientId}
+      panopto_clientSecret: ${panopto_clientSecret}
     depends_on:
       - db
 
