User model overhaul, switch to lazy migrations

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,8 +5,7 @@ FROM node:14.17.5
 
 WORKDIR /code
 
-COPY package.json /code/package.json
-COPY package-lock.json /code/package-lock.json
+COPY package*.json ./
 RUN npm ci
 
 # copy in our source code last, as it changes the most
