--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,10 @@
   "author": "team-skrrt-skrrt",
   "license": "MIT",
   "dependencies": {
-    "@admin-bro/express": "^3.1.0",
-    "@admin-bro/sequelize": "^1.2.1",
-    "admin-bro": "^4.0.1",
+    "@adminjs/design-system": "^2.0.2",
+    "@adminjs/express": "^4.0.1",
+    "@adminjs/sequelize": "^2.1.0",
+    "adminjs": "^5.3.3",
     "axios": "^0.22.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -22,7 +23,6 @@
     "express-formidable": "^1.2.0",
     "express-session": "^1.17.2",
     "mocha": "^9.1.3",
-    "openid-client": "^5.1.0",
     "passport": "^0.5.0",
     "passport-oauth2": "^1.6.1",
     "passport-openid-oauth20": "^1.2.6",
