Implement JWT Auth [BREAKING CHANGE]

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,15 +1,32 @@
 # Settings for development. Default to insecure (but fine for development) credentials to save setup time
 
 services:
+  caddy:
+    image: lucaslorentz/caddy-docker-proxy:ci-alpine
+    ports:
+      - 80:80
+      - 443:443
+    environment:
+      - CADDY_INGRESS_NETWORKS=caddy
+    networks:
+      - caddy
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - caddy_data:/data
+      # - ./certs:/certs
+    restart: unless-stopped
+    logging:
+      driver: none
   db:
     image: postgres:13
-    restart: always
     environment:
       POSTGRES_PASSWORD: ${POSTGRES_PASS:-crowdcaptions}
       POSTGRES_DB: ${POSTGRES_DB:-crowdcaptions}
       POSTGRES_USER: ${POSTGRES_PASS:-crowdcaptions}
     volumes:
       - db-data:/var/lib/postgresql/data
+    networks:
+      - dbnet
     ports:
       - 5432:5432
 
@@ -27,8 +44,24 @@ services:
       panopto_password: ${panopto_password}
       panopto_clientId: ${panopto_clientId}
       panopto_clientSecret: ${panopto_clientSecret}
+    ports:
+      # Only debug ports
+      - 9229:9229
+      - 9230:9230
     depends_on:
       - db
+    networks:
+      - caddy
+      - dbnet
+    labels:
+      caddy: localhost
+      caddy.reverse_proxy: "{{upstreams 8000}}"
 
 volumes:
   db-data:
+  caddy_data: {}
+
+networks:
+  caddy:
+    external: true
+  dbnet:
