--- a/backend/package.json
+++ b/backend/package.json
@@ -16,14 +16,17 @@
     "@adminjs/sequelize": "^2.1.0",
     "adminjs": "^5.3.3",
     "axios": "^0.22.0",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "express-formidable": "^1.2.0",
     "express-session": "^1.17.2",
+    "jsonwebtoken": "^8.5.1",
     "mocha": "^9.1.3",
     "passport": "^0.5.0",
+    "passport-jwt": "^4.0.0",
     "passport-oauth2": "^1.6.1",
     "passport-openid-oauth20": "^1.2.6",
     "pg": "^8.7.1",
