--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "@aws-sdk/client-cloudwatch-logs": "^3.58.0",
     "adminjs": "^5.3.3",
     "axios": "^0.22.0",
+    "connect-session-sequelize": "^7.1.3",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -30,6 +31,7 @@
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
     "passport-oauth2": "^1.6.1",
+    "passport-oauth2-refresh": "^2.1.0",
     "passport-openid-oauth20": "^1.2.6",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
