--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -13,6 +13,7 @@ services:
       - 5432:5432
 
   backend:
+    command: [ "npm", "run", "dev" ]
     environment:
       NODE_ENV: development
       PORT: ${PORT:-8000}
